--- a/Challenge_tasks/Task6.ipynb
+++ b/Challenge_tasks/Task6.ipynb
@@ -5,7 +5,7 @@
    "id": "7f086598",
    "metadata": {},
    "source": [
-    "6. Explainability for Audit-Ready AI"
+    "**6. Explainability for Audit-Ready AI**"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1f7903e0",
    "metadata": {},
    "outputs": [
@@ -42,18 +42,18 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# 1. Simulate binary anomaly data (sparse positive class)\n",
+    "# Simulate binary anomaly data \n",
     "X_train = pd.DataFrame(np.random.rand(100, 5), columns=[f'feat_{i}' for i in range(5)])\n",
     "y_train = pd.Series(np.random.rand(100) > 0.9)  # ~10% anomalies\n",
     "\n",
-    "# 2. Train a simple tree-based model\n",
+    "# Train a simple tree-based model\n",
     "model = xgb.XGBClassifier(use_label_encoder=False, eval_metric='logloss')\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# 3. Pick a few detected anomalies for explanation\n",
+    "# Pick a few detected anomalies for explanation\n",
     "X_test_anomalies = X_train[y_train == 1].head(3)\n",
     "\n",
-    "# 4. Create SHAP explainer (optimized for tree models)\n",
+    "# Create SHAP explainer \n",
     "explainer = shap.TreeExplainer(model)\n",
     "shap_values = explainer(X_test_anomalies)\n"
    ]
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5f5c8709",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
     }
    ],
    "source": [
-    "# To view in a Jupyter notebook\n",
+    "# To view in notebook\n",
     "shap.initjs()\n",
     "\n",
     "# For a single instance\n",
