--- a/Challenge_tasks/Task4.ipynb
+++ b/Challenge_tasks/Task4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2d2a4a9a",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import random\n",
     "import numpy as np\n",
     "\n",
-    "# === Module 1: Data Ingestor ===\n",
+    "#Data Ingestor\n",
     "class DataIngestor:\n",
     "    def __init__(self, input_data):\n",
     "        self.raw_data = input_data\n",
@@ -18,10 +18,9 @@
     "    def get_data(self):\n",
     "        return self.raw_data\n",
     "\n",
-    "# === Module 2: Emission Factor Mapper ===\n",
+    "# Emission Factor Mapper\n",
     "class EmissionFactorMapper:\n",
     "    def __init__(self):\n",
-    "        # Could be dynamically loaded or AI-enhanced later\n",
     "        self.factors = {\n",
     "            'steel': {'mean': 2.1, 'std': 0.1},\n",
     "            'transport': {'mean': 0.15, 'std': 0.02}\n",
@@ -36,7 +35,7 @@
     "            self.factors[material]['std']\n",
     "        )\n",
     "\n",
-    "# === Module 3: Supply Chain Model ===\n",
+    "# Supply Chain Model\n",
     "class SupplyChainModel:\n",
     "    def __init__(self, data):\n",
     "        self.steel_kg = data.get('steel_kg', 0)\n",
@@ -48,7 +47,7 @@
     "            'transport': self.transport_km\n",
     "        }\n",
     "\n",
-    "# === Module 4: Impact Calculator ===\n",
+    "# Impact Calculator \n",
     "class ImpactCalculator:\n",
     "    def __init__(self, factor_mapper):\n",
     "        self.mapper = factor_mapper\n",
@@ -60,7 +59,7 @@
     "            total += quantity * factor\n",
     "        return total\n",
     "\n",
-    "# === Module 5: Uncertainty Analyzer ===\n",
+    "# Uncertainty Analyzer\n",
     "class UncertaintyAnalyzer:\n",
     "    def __init__(self, supply_model, factor_mapper):\n",
     "        self.supply_model = supply_model\n",
