--- a/Challenge_tasks/Task4.ipynb
+++ b/Challenge_tasks/Task4.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0ebf8d11",
+   "metadata": {},
+   "source": [
+    "**4. Modular AI-Augmented LCA Model**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65b703ca",
+   "metadata": {},
+   "source": [
+    " Step 1: Refactored Modular LCA System"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2d2a4a9a",
@@ -78,6 +94,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46cef842",
+   "metadata": {},
+   "source": [
+    "Step 2: Use Case Example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "46b7725d",
@@ -114,18 +138,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "658911e5",
+   "id": "bf6187ad",
    "metadata": {},
    "source": [
-    "We refactored a monolithic LCA script into modular components — each handling a specific task: data ingestion, emission factor mapping, activity modeling, calculation, and uncertainty analysis. Using Monte Carlo simulations, we estimated not just point emissions, but the uncertainty range. In real scenarios, AI can play a huge role: NLP for reading technical reports, GNNs for supply chain modeling, and probabilistic methods for deeper uncertainty understanding.\n",
-    "\n"
+    "Step 3: AI Design Ideas for Each Module"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fc37fda4",
+   "id": "aaa89bef",
    "metadata": {},
-   "source": []
+   "source": [
+    "| **Module**               | **AI Enhancement**                                                                                                      |\n",
+    "| ------------------------ | ----------------------------------------------------------------------------------------------------------------------- |\n",
+    "| **DataIngestor**         | Use **NLP models** to extract material/quantity info from unstructured PDFs or reports.                                 |\n",
+    "| **EmissionFactorMapper** | Use **LLMs** or **knowledge graphs** to auto-lookup or infer emission factors from scientific texts or databases.       |\n",
+    "| **SupplyChainModel**     | Model relationships with **Graph Neural Networks (GNNs)** to understand dependencies between suppliers and sites.       |\n",
+    "| **ImpactCalculator**     | Enhance logic with **ML regressors** trained on real LCA datasets for context-aware factors.                            |\n",
+    "| **UncertaintyAnalyzer**  | Use **Bayesian Neural Networks** or **probabilistic programming** to represent uncertainty beyond Gaussian assumptions. |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "658911e5",
+   "metadata": {},
+   "source": [
+    "Summary : We refactored a monolithic LCA script into modular components — each handling a specific task: data ingestion, emission factor mapping, activity modeling, calculation, and uncertainty analysis. Using Monte Carlo simulations, we estimated not just point emissions, but the uncertainty range. In real scenarios, AI can play a huge role: NLP for reading technical reports, GNNs for supply chain modeling, and probabilistic methods for deeper uncertainty understanding.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
