--- a/Challenge_tasks/Task3.ipynb
+++ b/Challenge_tasks/Task3.ipynb
@@ -5,12 +5,20 @@
    "id": "eba9a5d9",
    "metadata": {},
    "source": [
-    "3. Feature Engineering Automation"
+    "**3. Feature Engineering Automation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b94471cb",
+   "metadata": {},
+   "source": [
+    "Step 1: Implementing Advanced Feature Functions (with pandas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d03d2cf5",
    "metadata": {},
    "outputs": [
@@ -28,19 +36,27 @@
     "\n",
     "def engineer_features(df):\n",
     "    df['timestamp'] = pd.to_datetime(df['timestamp'])\n",
-    "    df = df.sort_values('timestamp')  # Ensure proper order for rolling\n",
+    "    df = df.sort_values('timestamp')  \n",
     "\n",
     "    # Time-based features\n",
     "    df['day_of_week'] = df['timestamp'].dt.dayofweek  # 0 = Monday\n",
     "    df['month'] = df['timestamp'].dt.month\n",
     "\n",
-    "    # Rolling 7-day mean for emissions\n",
+    "   \n",
     "    df['emissions_rolling_7d'] = df['emissions'].rolling(window=7, min_periods=1).mean()\n",
     "\n",
-    "    # Emission intensity (emissions per unit production)\n",
+    "    # Emission intensity \n",
     "    df['emission_intensity'] = df['emissions'] / df['production']\n",
     "\n",
     "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b5cddd5",
+   "metadata": {},
+   "source": [
+    "Step 2: Feature Selection with SelectKBest"
    ]
   },
   {
@@ -67,10 +83,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1f97d90",
+   "metadata": {},
+   "source": [
+    "Step 3: SHAP for Feature Importance Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "521eba45",
    "metadata": {},
    "source": [
     "Once the model is trained, SHAP (SHapley Additive exPlanations) allows us to visualize and quantify how much each feature contributes to each prediction. This helps verify whether the features we engineered — like rolling means or emission intensity — actually influence the model the way we expected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "753fbdb2",
+   "metadata": {},
+   "source": [
+    "This is how it can be done in code :"
    ]
   },
   {
@@ -145,6 +177,14 @@
     "\n",
     "# SHAP validation\n",
     "explain_with_shap(X_selected, df_fe['target'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "910217da",
+   "metadata": {},
+   "source": [
+    "We engineered a richer set of features including rolling means and intensity ratios that capture temporal and operational dynamics in emissions data. Then, using SelectKBest, we filtered out the most predictive features. Finally, SHAP helped validate which features truly mattered to the model — bridging raw data and explainable insights."
    ]
   },
   {
