--- a/Challenge_tasks/Task5.ipynb
+++ b/Challenge_tasks/Task5.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "id": "98488de2",
    "metadata": {},
-   "source": []
+   "source": [
+    "**5. Reinforcement Learning for Decarbonization**"
+   ]
   }
  ],
  "metadata": {
