--- a/Challenge_tasks/Task6.ipynb
+++ b/Challenge_tasks/Task6.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5f5c8709",
    "metadata": {},
    "outputs": [
@@ -103,9 +103,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "626ea3ed",
+   "metadata": {},
+   "source": [
+    "Save as HTML (outside of notebook)\n",
+    "\n",
+    "If you're running this in a script or want to attach it to a report:\n",
+    "shap.save_html(\"anomaly_explanation_force_plot.html\", force_plot)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3c298ee9",
    "metadata": {},
    "source": [
+    "==========\n",
+    "\n",
     "Step 3: Human-Readable Explanation for an Audit Report"
    ]
   },
@@ -126,13 +139,23 @@
     "\n",
     "Conversely, feat_1 acted as a mitigating factor, slightly lowering the anomaly score (-0.08).\n",
     "\n",
-    "The SHAP force plot (attached) provides a clear visualization of how these features combine to shift the prediction away from the model’s baseline expectation. This makes the model's decision transparent and traceable — key criteria for regulatory audits and internal governance.\n",
+    "The SHAP force plot provides a clear visualization of how these features combine to shift the prediction away from the model’s baseline expectation. This makes the model's decision transparent and traceable — key criteria for regulatory audits and internal governance.\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "020c2231",
+   "metadata": {},
+   "source": [
+    "======\n",
+    "\n",
+    "Summary : We used SHAP to demystify how a tree-based anomaly detection model arrives at its decisions. SHAP values decompose the prediction into additive feature contributions, allowing us to produce user-friendly plots and clear justifications. For audit readiness, this approach ensures traceability, accountability, and interpretability — all critical for deploying AI in regulated environments."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a8135ec",
    "metadata": {},
    "source": []
   }
